<resources>
    <string name="app_name">CoffeeManager</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Coffee-shop Manager</string>
    <string name="title_work">Work</string>
    <string name="title_stats">Statistics</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="work_fragment_title">Work fragment</string>
    <string name="stats_fragment_title">Work fragment</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_aggregation_date">Statistics for: </string>
    <string name="select_aggregation_date">Select aggregation date</string>
    <string name="coffee_cups_sold">Coffee Cups Sold</string>
    <string name="proceeds_rubles">Proceeds, rubles:</string>
    <string name="trading">Trading:</string>
    <string name="cups_count">Количество стаканов</string>
    <string name="confirm_sale">Подтвердить продажу:</string>
    <string name="day_proceeding">Выручка за день:</string>
    <string name="cups_left">Стаканов осталось:</string>
    <string name="end_day">Завершить работу</string>
</resources>
