<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nkargin.ru.coffeemanager.main.tabs.StatsFragment">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/choose_aggregation_date" />

    <EditText
        android:id="@+id/stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="35dp"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:textAlignment="center"
        android:ems="6"
        android:inputType="none" />

    <EditText
        android:id="@+id/stats1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="50dp"
        android:layout_marginTop="35dp"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:textAlignment="center"
        android:ems="6"
        android:inputType="none" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:stretchColumns="*"
        android:layout_marginBottom="60dp">

        <TableRow
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_width="0dp"
            >

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coffee_cups_sold"
                android:inputType="none"
                android:textAlignment="center"
                />

            <EditText
                android:id="@+id/editText11"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:ems="7"
                android:textAlignment="center"
                android:text="15"
                />
        </TableRow>

        <TableRow
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_width="0dp"
            >

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:inputType="none"
                android:layout_height="wrap_content"
                android:text="@string/proceeds_rubles"
                android:textAlignment="center"
                />

            <EditText
                android:id="@+id/editText12"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textAlignment="center"
                android:text="1500"
                />
        </TableRow>

    </TableLayout>

</FrameLayout>
